# cpp-snake

./: CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.sh
